--- a/samples/audio-video-player/audio_video_player.html
+++ b/samples/audio-video-player/audio_video_player.html
@@ -70,5 +70,5 @@
   </div>
   <canvas width=1280 height=720></canvas>
 </div>
-<script type="module" src="./index.js" ></script>
+<script type="module" src="./index.ts" ></script>
 </html>
