port encode-decode-worker

--- a/samples/encode-decode-worker/index.html
+++ b/samples/encode-decode-worker/index.html
@@ -175,9 +175,9 @@
 <br/></br><video height="50%" id="outputVideo" autoplay muted></video>
 <br/>Encoded (and Decoded) Video via WebCodecs</br>
 <br/></br>
-<button id="connect">Start</button>
+<button id="start">Start</button>
 <button id="stop">Stop</button>
 <script src="../third_party/plotly/plotly-2.18.2.min.js"></script>
-<script src="js/main.js"></script>
+<script type="module" src="js/main.ts"></script>
 </body>
 </html>
